--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,64 @@
 @tailwind components;
 @tailwind utilities;
 
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.coin {
+  position: absolute;
+  width: 0.1em;
+  height: 1em;
+  font-size: 50px; /* Tamaño base, ajustado para monedas más pequeñas */
+  background: #ffd700;
+  animation: 10s fall linear infinite, spin_y linear infinite;
+  transform-style: preserve-3d;
+}
+.coin .side,
+.coin:before,
+.coin:after {
+  content: "";
+  position: absolute;
+  width: 1em;
+  height: 1em;
+  overflow: hidden;
+  border-radius: 50%;
+  right: -0.4em;
+  text-align: center;
+  line-height: 1;
+  transform: rotateY(-90deg);
+  backface-visibility: hidden;
+  background: #ffd700;
+}
+.coin .tails,
+.coin:after {
+  left: -0.4em;
+  transform: rotateY(90deg);
+}
+.coin:before,
+.coin:after {
+  background: #ffd700;
+  backface-visibility: hidden;
+  transform: rotateY(90deg);
+}
+.coin:after {
+  transform: rotateY(-90deg);
+}
+@keyframes fall {
+  from {
+    top: 0%;
+  }
+  to {
+    top: 100%;
+  }
+}
+@keyframes spin_y {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
   }
 }
 
@@ -21,8 +69,9 @@ html {
 
 html,
 body {
-  max-width: 100vw;
   overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
 }
 
 body {
